--- a/Cesium-1.69/Apps/template.html
+++ b/Cesium-1.69/Apps/template.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <div id="cesiumContainer"></div>
-    <script src="Source/App.js"></script>
+    <script src="../../App.js"></script>
   </body>
 </html>
