--- a/Cesium-1.69/Apps/template.html
+++ b/Cesium-1.69/Apps/template.html
@@ -10,10 +10,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <title>Hello World!</title>
-    <script src="../Build/Cesium/Cesium.js"></script>
+    <title>Cesium_template</title>
+    <script src="https://nbayashi.github.io/cesium_template/Cesium-1.69/Build/Cesium/Cesium.js"></script>
     <style>
-      @import url(../Build/Cesium/Widgets/widgets.css);
+      @import url(https://nbayashi.github.io/cesium_template/Cesium-1.69/Build/Cesium/Widgets/widgets.css);
       html,
       body,
       #cesiumContainer {
